Sun Jun 21 17:14:19 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Options.java: rename option:
	  --readonly-plt -> --readonly-got.

Sun Jun 21 03:48:12 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/GNULinker.java: parameterize linker
	  path.

Sun Jun 21 03:47:05 2009  Minero Aoki  <aamine@loveruby.net>

	* import/stdlib.hb: add system() prototype.

Thu Jun 18 00:45:50 2009  Minero Aoki  <aamine@loveruby.net>

	* lib/Makefile: use 's' option to create index.

Sun Jun 14 23:44:47 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Options.java
	  (parseCommaSeparatedOptions): AbstractList does not support
	  #remove.

Sat Jun 13 22:42:24 2009  Minero Aoki  <aamine@loveruby.net>

	* rename class: AssemblyFile -> AssemblyCode.

Sat Jun 13 22:37:02 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/entity/ToplevelScope.java: move
	  #definedGlobalVariables and #definedCommonSymbols to IR.

	* net/loveruby/cflat/ir/IR.java: ditto.

	* net/loveruby/cflat/ir/IR.java: new method
	  #isGlobalVariableDefined.

	* net/loveruby/cflat/ir/IR.java: new method
	  #isCommonSymbolDefined.

	* net/loveruby/cflat/ir/IR.java: new method
	  #isStringLiteralDefined.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: use these
	  methods.

Sat Jun 13 17:41:13 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/utils/CommandUtils.java: better error
	  message.

Sun Jun  7 13:42:15 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java
	  (StackFrameInfo): shorten code using CodeGenerator constant
	  directly.

Sun Jun  7 04:16:39 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  extract class: StackFrameInfo.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  extract method: generateFunctionBody.

	net/loveruby/cflat/entity/DefinedFunction.java: new method
	  #lvarScope.
